--- a/flame-front/public/index.html
+++ b/flame-front/public/index.html
@@ -67,7 +67,7 @@
 			crossorigin="anonymous"
 		></script>
 
-		<title>SMARTjOB</title>
+		<title>Flame Cake</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
